# tvheadend-frontend

./: .gitignore  LICENSE  README.md  build.sh  index.html  tvheadend-frontend.cabal
src/: Lib.hs  TvheadendApi.hs  Utilities.hs
src/GUI/: ChannelDrawer.hs  Player.hs  Utilities.hs
src/Models/: Channel.hs
