name: tvheadend-frontend
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: 2016 Simon Vandel Sillesen
maintainer: simon.vandel@gmail.com
homepage: https://github.com/simonvandel/tvheadend-frontend#readme
description:
    Please see README.md
category: Web
author: Simon Vandel Sillesen

source-repository head
    type: git
    location: https://github.com/simonvandel/tvheadend-frontend

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        ghcjs-base -any,
        ghcjs-dom,
        ghcjs-prim,
        transformers,
        reflex-dom -any,
        text -any,
        data-default -any,
        time -any,
        aeson -any,
        bytestring -any,
        vector -any,
        containers -any,
        extra -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
    default-extensions:
        OverloadedStrings,
        ScopedTypeVariables

executable tvheadend-frontend-output
    main-is: Main.hs
    build-depends:
        base -any,
        ghcjs-base -any,
        tvheadend-frontend -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall
